--- a/passport/src/main/resources/application.properties
+++ b/passport/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 ###redis配置
 #spring.redis.host=192.168.191.157
 spring.redis.host=47.105.146.18
-spring.redis.port=6379
-spring.redis.password=123456
+spring.redis.port=6389
+spring.redis.password=MisWang*1994
 spring.redis.database=0
 # 连接池中的最大空闲连接
 spring.redis.jedis.pool.max-active=200
